--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     margin:0%;
     padding:0%;
     box-sizing: border-box;
-    font-size: 15px;
-    font-weight: 1px;
+    /* font-size: 15px;
+    font-weight: 1px; */
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
@@ -12,48 +12,59 @@ html,body{
     height: 100%;
     width: 100%;
 }
-
-#main{
-    background:rgb(255, 3, 3);
+.container{
+    background:rgb(232, 27, 27);
     height: 100%;
     width: 100%;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     /* align-items: center;
-    justify-content: center; */
-    
+    justify-content: center;     */
 }
 
-#box1{
+.box1{
     background: #000;
-    width: 66.6%;
-}
-#box1 img{
-    align-items: center;
+    width: 67%;
     height: 100%;
     display: flex;
-    overflow: hidden;
+    flex: 1 1  200px;
+    /* align-items: center;
+    justify-content: center;
+    overflow: hidden; */
+}
+
+.box1 img{
+    height: 100%;
+    width: 100%;
+    width: 100%;
+    height: auto;
+    object-fit:cover;
+    /* overflow: hidden; */
+
 
 }
 
-#box2{
+.box2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: #ffffff;
-    width: 33.4%;
+    width: 33%;
     height: 100%;
 }
-
 #box3{
     border:1px solid #ffffff;
-    padding: 0px;
     width: 68.2%;
     height: 64%;
     display: flex;
-    margin-top: 20%;
-    margin-left: 16%;
-/
+    margin-top: -13%;
+    /* margin-left: 16%; */
     /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
 }
 #rblRole_1{
     margin-left:10px;
+    margin-top: 10px;
 }
 
 #imgFooterLogo{
@@ -62,7 +73,7 @@ html,body{
     border-radius: 5px;
 }
 .form-control {
-    border: 1px solid #d7d7d7; /* Border style */
+    border: 1px solid #d3d3d3; /* Border style */
     padding: 10px; /* Inner spacing */
     font-size: 15px; /* Font size */
     transition: all 0.8s ease; /* Smooth transition for hover effects */
@@ -71,7 +82,7 @@ html,body{
 
 /* Class for resizing the input box */
 .resize-input {
-    width: 100%; 
+    width: 100%;
 }
 
 /* Optional: Add a hover effect */
@@ -97,7 +108,7 @@ html,body{
 .mt-checkbox input[type="checkbox"] {
     width: 20px; /* Set width */
     height: 20px; /* Set height */
-    border: 2px solid #ccc; /* Border style */
+    border: 2px solid #7b0c0c; /* Border style */
     margin-right: 5px; /* Space between checkbox and label */
     position: relative; /* Positioning for the checkmark */
     cursor: pointer; /* Change cursor to pointer */
@@ -157,7 +168,7 @@ html,body{
     display: flex;
     justify-content: center;
     width: 53%;
-    border: 1px solid rgb(119, 119, 119);
+    border: 1px solid rgb(255, 255, 255);
 }
 .text{
     background: #ffffff;
@@ -172,3 +183,76 @@ html,body{
     font-size: small;
 }
 
+
+/* Media Query for smaller screens */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: row;
+        height: 100%;
+       
+    }
+
+    .box1 {
+        display: flex;
+        /* align-items: center;
+        justify-content: center; */
+        width: 100%;
+        height: 70%;
+        
+    }
+    .box1 img{ 
+        width: 100%;
+        height: 390px;
+        /* object-fit: cover; */
+
+        /* overflow: hidden; */
+        /* position: fixed; */
+
+    }
+    .box2{
+        background: #ffffff;
+        width: 100%;
+        height:40%;
+        border:1px solid #ffffff;
+        /* position: fixed; */
+    }
+    #box3{
+        padding: 40px;
+        position: absolute;
+        width: 100%;
+        height: 65%;
+        background: #ffffff;
+    } 
+    #imgFooterLogo{
+        background: #ffffff;
+        border:1px solid #ffffff;
+        margin-top: 75px;
+    }
+    .text{
+        padding-top: 10px;
+        font-size: 17px;
+        font-weight: 80px;
+    }
+    .login-with-google-btn {
+        border: .9px solid rgb(255, 255, 255);
+        background-color: #ffffff;
+        color: rgb(119, 119, 119); 
+        width: 100%;
+        height:40px;
+        margin-left:300px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    .responsive-image{
+        margin-right:-300px;
+        
+    }
+    .google{
+        margin-top: 10px;
+
+        background: #ffffff;
+        width: 30%;
+        border: 1px solid rgb(199, 199, 199);
+    }
+
+}
