--- a/style1.css
+++ b/style1.css
@@ -1,194 +1,251 @@
 *{
     margin:0%;
     padding:0%;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
     /* font-size: 15px;
-    font-weight: 1px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+    font-weight: 1px; */
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
- /* @media (max-width: 20px) {
-    .box {
-        width: 10%;
-} } */
 
 html,body{
     height: 100%;
     width: 100%;
 }
-
-.main{
-    background:rgb(97, 97, 97);
+.container{
+    background:rgb(232, 27, 27);
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: center;
-    
+    flex-direction: column;
+    flex-wrap: wrap;
+
 }
 
-.box{
-    background: #ffffff;
-    border:burlywood;
-    width: 370px;
-    max-height: 446px;
+.box1{
+    background: #000;
+    width: 67%;
+    height: 100%;
     display: flex;
-    border-radius: 2%;
-    justify-content: center;
-    margin-top: 60px;
+    flex: 1 1  200px;
 }
 
+.box1 img{
+    height: 100%;
+    width: 100%;
+    width: 100%;
+    height: auto;
+    object-fit:cover;
+
+
+}
 
 .box2{
-    /* display: flex; */
-    justify-content: center;
-    width: 87%;
-    height: 100%;
-    background: #ffffff;
-}
-
-.header{
-    background: #ffffff;
-    color: #ffffff;
-    width: 93.78%;
-    height: 20%;
-    /* display: flex; */
-    padding: 10px;
-    justify-content: center;
-    align-items: center;
-
-}
-.sbold{
-    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     background: #ffffff;
-    font-size: 22px;
-    font-style: bold;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #000;
-
-}
-#hd1{
-    margin-bottom: 2px;
-    font-size: 20px;
-    margin-top: -15px;
-}
-
-.role{
-    /* display: flex; */
-    background: #ffffff;
-    width: 100%;
-    height: 25%;
-}
-.form-group{
-    width: 100%;
+    width: 33%;
     height: 100%;
-    /* background: #0bda00; */
 }
-.form-group1{
+#box3{
+    border:1px solid #ffffff;
+    width: 68.2%;
+    height: 64%;
+    display: flex;
+    margin-top: -13%;
+}
+#rblRole_1{
+    margin-left:10px;
+    margin-top: 10px;
+}
+
+#imgFooterLogo{
     width: 100%;
-    height: 100%;
-
+    background: #000;
+    border-radius: 5px;
 }
-.selectme{
-    padding: 5px;
+.form-control {
+    border: 1px solid #d3d3d3; /* Border style */
+    padding: 10px; /* Inner spacing */
+    font-size: 15px; /* Font size */
+    transition: all 0.8s ease; /* Smooth transition for hover effects */
+    margin-top: 4px;
+}
+
+/* Class for resizing the input box */
+.resize-input {
     width: 100%;
-    height: 30%;
-    background: #ffffff;
-    border:1px solid #e2e2e2;
-    border-radius: 4px;
-    color: #9a9999;
-    margin-bottom: 9px;
-    margin-top: -10px
-}
-.inputbox{
-    width: 100%;
-    height: 30px;
-    background: #ffffff;
-    border:1px solid #e2e2e2;
-    border-radius: 4px;
-    color: #9a9999;
-    margin-bottom: 9px;
 }
 
-.row{
-    height: 90px;
-    background: #ffffff;
-    margin-bottom: 50px;
-
+/* Optional: Add a hover effect */
+.resize-input:hover {
+    border-color: #b2d7ff; /* Change border color on hover */
 }
 
-.button{
+/* Optional: Add focus effect */
+.resize-input:focus {
+    border-color: #007bff; 
+    outline: none; 
+}
+
+/* Style for the checkbox */
+.mt-checkbox {
+    margin-left: 1%;
+    margin-bottom: 7px;
+    display: flex;
+    align-items: center;
+    /* font-size: medium; */
+    /* font-family: Arial, sans-serif; */
+}
+.mt-checkbox input[type="checkbox"] {
+    width: 20px; /* Set width */
+    height: 20px; /* Set height */
+    border: 2px solid #7b0c0c; /* Border style */
+    margin-right: 5px; /* Space between checkbox and label */
+    position: relative; /* Positioning for the checkmark */
+    cursor: pointer; /* Change cursor to pointer */
+}
+/* login button */
+.btn {
+    padding: 9px 15px;
+    border: none;
+    cursor: pointer;
+    margin-right: 0.9px; /* Space between buttons */
+}
+
+.green-haze {
+    background-color: #298e3f; /* Green background for login button */
+    color: rgb(255, 255, 255); /* White text */
+}
+
+.green-haze:hover {
+    background-color: #007419; /* Darker green on hover */
+}
+
+.red {
+    background-color: #cf3545; /* Red background for forgot password button */
+    color: white; /* White text */
+}
+
+.red:hover {
+    background-color: #f6182e; /* Darker red on hover */
+}
+
+/* Style for the Google login button */
+.login-with-google-btn {
+    border: .9px solid rgb(255, 255, 255);
+    background-color: #ffffff;
+    color: rgb(119, 119, 119); /* White text */
+    width: 100%; /* Full width */
+    height:40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.responsive-image {
+    cursor: pointer;
+    display: flex;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 20px;
+    height: 20px;
+    border: 1px solid rgb(255, 255, 255);
+    align-items: center;
+    justify-content: center;
+}
+
+.google{
+    margin-top: 10px;
     background: #ffffff;
     display: flex;
-    /* margin-right: 50px; */
-}
-.line{
-    font-size: larger;
-    margin-top: -3px;
-    margin-bottom: 100px;
-    color: #dbd7d7;
-    justify-content: center;  
-    
-}
-
-#lbSubmit{
-    color: #ffffff;
-    background: #3ea68a;
-    width: 70px;
-    height: 36px;
-    margin-right: 4px;
-    border-radius: 4px;
-    border: 1px;
-    cursor: pointer;
-}
-#lbSubmit:hover{
-    background: #00ab56;
-}
-
-#lblogin{
-    color: #ffffff;
-    background: #5d7ac9;
-    width: 110px;
-    height: 36px;
-    margin-right: 4px;
-    border-radius: 4px;
-    border: 1px;
-    cursor: pointer;
-}
-
-#lblogin:hover{
-    background: #0040bf;
-}
-
-.logo{
-    
-    background: #ffffff;
-    width: 100%;
-    height: 25%;
-}
-.logo img{
-    /* padding: 5; */
-    background: #99ff00;
-    height: 85px;
-    width: 320px;
-    margin-top: 50px;
-    /* margin-bottom:20px; */
+    justify-content: center;
+    width: 53%;
     border: 1px solid rgb(255, 255, 255);
 }
-.txt{
-    margin-top: 40px;
+.text{
     background: #ffffff;
-    width: 100%;
-    height: 2%;
     color: #000000;
-}
-.t1{
-    /* background: #ffffff; */
-    /* margin-top: 17px; */
+    width: 100%;
+    height: 53px;
     display: flex;
-    margin-bottom: 7px;
+    /* margin-left: 40px; */
+    margin-top: px;
+    align-items: center;
     justify-content: center;
+    font-size: small;
 }
-    
+
+
+/* Media Query for smaller screens */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: row;
+        height: 100%;
+       
+    }
+
+    .box1 {
+        display: flex;
+        /* align-items: center;
+        justify-content: center; */
+        width: 100%;
+        height: 70%;
+        
+    }
+    .box1 img{ 
+        width: 100%;
+        height: 390px;
+        /* object-fit: cover; */
+
+        /* overflow: hidden; */
+        /* position: fixed; */
+
+    }
+    .box2{
+        background: #ffffff;
+        width: 100%;
+        height:40%;
+        border:1px solid #ffffff;
+        /* position: fixed; */
+    }
+    #box3{
+        padding: 40px;
+        position: absolute;
+        width: 100%;
+        height: 65%;
+        background: #ffffff;
+    } 
+    #imgFooterLogo{
+        background: #ffffff;
+        border:1px solid #ffffff;
+        margin-top: 75px;
+    }
+    .text{
+        padding-top: 10px;
+        font-size: 17px;
+        font-weight: 80px;
+    }
+    .login-with-google-btn {
+        border: .9px solid rgb(255, 255, 255);
+        background-color: #ffffff;
+        color: rgb(119, 119, 119); 
+        width: 100%;
+        height:40px;
+        margin-left:300px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    .responsive-image{
+        margin-right:-300px;
+        
+    }
+    .google{
+        margin-top: 10px;
+
+        background: #ffffff;
+        width: 30%;
+        border: 1px solid rgb(199, 199, 199);
+    }
+
+}
